Fix admin category brand and dynamic home menu